Fix spacing issue in project image

--- a/src/Components/Projects/Projectdetail.css
+++ b/src/Components/Projects/Projectdetail.css
@@ -18,6 +18,12 @@
     overflow-y: scroll;
 }
 
+.detailPic {
+    width: 100%;
+    height: auto;
+    border-radius: 15px;
+}
+
 .nav {
     cursor: pointer;
     display: flex;
