--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -1,10 +1,11 @@
 
 .projectsContainer {
-    width: 90vw;
+    width: 80vw;
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
+    position: relative;
 }
 .project {
     width: 25rem;
@@ -19,15 +20,15 @@
     height: 100%;
     position: relative;
     opacity: 0.8;
+    scale: 1.3;
 }
 
 .info {
-    overflow: hidden;
     width: 92%;
     transform: translateY(-22rem);
-    color: rgb(58, 58, 58);
+    color: rgb(255, 255, 255);
     backdrop-filter: blur(0.4rem);
-    background-color: rgba(208, 208, 208, 0.3);
+    background-color: rgba(52, 52, 52, 0.3);
     display: flex;
     align-items: center;
     justify-content: end;
@@ -76,7 +77,15 @@
     background-color: rgba(58, 58, 58, 0.4);
 }
 
-@media only screen and (max-width: 1110px) {
+@media only screen and (max-width: 1210px) {
+    .projectsContainer {
+        width: 90vw;
+       
+    }
+    
+}
+
+@media only screen and (max-width: 1120px) {
     .projectsContainer {
        justify-content: center;
        flex-direction: column;
